@@ -15,21 +15,19 @@ AUX pinentry-0.9.2-simplify.patch 1431 SHA256 093d623379ff571b23ceddd71f62e4792f
 DIST pinentry-0.9.0.tar.bz2 464272 SHA256 90045a07ab8e1a8e1ecf5d19b51691f195525e579fa5d71d7e92c120b05490ab SHA512 2cc53a5c3852edaf6e940228d9b43fe4709344eba5fe230b7afd22b2c0239d0b258917d75661d80590b2d61c6fe9dac8ad15a0b4a0a0e7fba90a9e1c07364edd WHIRLPOOL 3f77a8aa2d44c7206d877e31088ec927473441e61f06e788330545d75ac489e6e9d5bf0026b23d0824304dad54ce8e61c4571d186df7ad0edc2d644ca3af04ac
 DIST pinentry-0.9.1.tar.bz2 482295 SHA256 9cd08e856b395df3adc7124170b53f77c6d5c8bf88e899e818648ec70d3e9695 SHA512 2462d25a471a6053a0d1b67a05d1a828b9d14ca4aeced352376ff16b6aa4d03fd6d1013aee1b07b97f9ee73f218065c48fe2746bbf27f3cb2bd9aa0b9c9c1a50 WHIRLPOOL 2e74e31567b26d0ee1d0d962f9c4dee6bd9c5a8679751dc85a14d3f2d47bc83aa068ac9810261c1e47a08eacb25777926be3de0db9e3d20d3d8348033c6b13c5
 DIST pinentry-0.9.2.tar.bz2 495742 SHA256 fd8bc1592ceb22bb492b07cb29b1b140bb882c859e6503b974254c0a4b4134d1 SHA512 68ba5643b9dc4e71b28f964172c7f37a67d1b22914c649c612e001c7c5ca0c40a0a2ec0974f50dbdc8dd98cc6266688c71d67e922db4334536797d331b0203cf WHIRLPOOL 457c8408ed04b2b5f72761d0b24cf1f07b1b81bb431cc666ee88015fda5a868a4ad296ac82fc98c79d5af5c1fdfdc597cb38914088143fb08e7838c9b572a090
-EBUILD pinentry-0.9.0-r1.ebuild 2984 SHA256 5c8d235f29341909888aed86e394c0597391cbadf8a62f683e0843f416709c96 SHA512 d0b1eba241dee63b0bcb048fe7b73835727283a817d5a58f8390b6a9a4000d2f8532b045d3c284947a8e881f892c0a51d41276a0fe143d1271c11f171324986f WHIRLPOOL 5bf8814ec11ebc63a346db2368947aab5299489c07a93c80ec9097b366579194698f1637d63f0798941afaa330aa59bd6d13bd3b1be1eeba75e0ce8c38cbf14f
-EBUILD pinentry-0.9.0-r2.ebuild 3038 SHA256 8cecfa92b1cd7f5cf663c409bad542b1cf2024ab3bebbab19daf32ea632a9404 SHA512 ab76435473aa4e22248a051607c28c76e634c6398096839b6436f738e852cfe564403c6addde7d696c6d4d28592c9257e48092af992c4211d5e84f4b07f1b5cc WHIRLPOOL c86ce2526f7c912edb0d0c12028d18ec3878e55008d0a70a89e7bcf33d27bb9461ecd5d9b6605f10c643d20a1bc94a9959857fb995314c61473660c19e815ea4
 EBUILD pinentry-0.9.0-r3.ebuild 3136 SHA256 fbd8f91d0c28a92bc6923d19d0414f3c1b4035e6ce59eb7fdb153e5fe63f4551 SHA512 40c06d484b680507b18fdfdbbe17da15c1f41b9b7c87e8a3435b88d363f26d7ac8ec8d045c8e9f9988d110fe8ae826c249d5549974fe5bd60544718efadc4671 WHIRLPOOL 4053c9edbb0c036790166ba62ba25017eee419e43d5fadc2f561913d0a584fcb7d0b72e4da5e6a529316e06b23314bd88c17099e2fafe6c2b71a101129b7010f
 EBUILD pinentry-0.9.0.ebuild 2901 SHA256 e890a9acc471f6252fe4658e7f5b54a99525c06d5cf96681c3d0483dd9735829 SHA512 cfcd1733d69eebcf8e1c01d275edf7e50be76ddfe1fb439ebde80d7ae3f188d1f4feafa4fe471beb59a6d82aab4edf681a122f4acf74083b0e7816605faf0c7a WHIRLPOOL 5502e3e32b46d1aec265eeac5467772c95d7d404b5afe3e1a4b56333e8d581b4e8270b5cad44c66db99949229cbf6d3a38c12c7ca43174a87da6f3bc090775ff
 EBUILD pinentry-0.9.1.ebuild 2721 SHA256 97ba93a30e757ab11988a9f1ed9ece1175d61d0c353063a4372105dc6a37037f SHA512 a123d2bfea94b23b70ecee4c7f52ba8fe0cc163850f8dcad8952e137067c0717a089ef880f16454e296e86af983cb132b618ad3e750590cc891f741351b1651b WHIRLPOOL dbc1dca7cc2a7a98b27481f0eca034dc1ac73e80b3d5c94be8176564aff4e921704059ca510f6fc3fbaf485e714511231bc035177e40903b35bf701273b3f4ab
 EBUILD pinentry-0.9.2-r1.ebuild 3131 SHA256 2d498e346d2d422bb9d455e057ec4862afa0081f62371245984627f969f358f2 SHA512 92a39f12d2ca574e8f5358a60f7b62b81d0ac2306faaa52bf1118dc16a2d1e9e1115af682d3aaa55f63af4d0f9d849102005b60853dc366480442730194a1ff6 WHIRLPOOL fcf2c42bb9a7cd7324ae635088e313b20b10e6689274b4c7ce35f22b9a571c7ea2056e55d2b29e1eaf6f9cc3e275743a4face1b918f031a569e9d4556226e8e8
-MISC ChangeLog 23529 SHA256 24542d623ba82bb04766de56bb9d3917b15aa61be23fcf2981e945df4d2a7fdc SHA512 6206afbc29f7180850f3f9d828132f3eee1c9a6bec16607c88a41e3dae282419e136f6bfe45516cf0d0e3d774b4e73ed690d58f207fac7702be88cf1e66c2b56 WHIRLPOOL 74085eb20b96ade8af784f0da1d4a887e7f4421f64e279bb0a302c504c67a9ddcb0cdddb7e04b5abe326a50f984ff3a70187d2411f2484a977c19dbcaf5f5368
+MISC ChangeLog 23654 SHA256 80c43debd66f2fdb1f27590fd09c175e4a3321307658b5b26abb9a21c479e475 SHA512 e009debc609d71fdd6cfb8f1e0badbd201a853b7114cdd7d90e8262151c196badb16b5aaef06ee5cc9c7142627e2210f6158fb0768dd22f81216b027dad079ea WHIRLPOOL af8a8649adc3516e14564c038debdfba6e666192256d025ec16c27d9a5d3a4b222a81024339af6a298cb0786b3906598f76bfb10c2b2d2a6394cb214fd1222e5
 MISC metadata.xml 232 SHA256 0f9362f8e4539dec9b2feb1bd93d34e4dff44290f4dac44dd50f9d44de62360e SHA512 79b3d9679dd2d61479a24ef159f6a23758dad2b77679824bae7758c8f47375b4548e0adf135b3dae5c6d6eff23d134f9477a06fd29789d4fb98670431670bb01 WHIRLPOOL 2ac86da5a1d1512f358400d0616ca3baba6ad55d68ad68296975192cf4f60ed55a3faefe0c3290720d61f117e6c8b24b37cd017e8b8c21c77f977dda8d3212fa
 -----BEGIN PGP SIGNATURE-----
 
-iQEcBAEBCAAGBQJVVFjlAAoJEP7VAChXwav6s1AH/iAvOgakk2Kdl05vgOg2j/E6
-jjl3u1hGODSiA0KzfC5h94x+x37W4tWcD6TT0RK1QCwOc8ouRT9ve5j+JxthvQNG
-3j6fdo498nb3LUWY3j1ZwCtwaWrF0/FKe0K+GDeA2pp00gJ+udeux2PXTequ3MDB
-S9q1DoDhqDqqA8eZJcaDibKUBcsZwLamTqMylf133RTmjqNFkKXiJvcUrt7wFBKn
-mYbRDaWZ3s34s+JZJAAosSNbcQHhbV4QfuKUIpbaBBaEyH0TtN2108LBw04lZY//
-2bQPr8/wCpJNDA3tG96xufLfQPF4zKSpUb2sKn5qDUODG+yVFugpDlzA4qSYfrA=
-=QK7W
+iQEcBAEBCAAGBQJVVLy5AAoJEP7VAChXwav6j/YH/A14DfR6901qyl1VtfYlLJfW
+tsJgsEXrU+T781NG5fu/73Y+CFVLBU4p2/6b1xjKTskncADW4DhdtIc2zS8GvjXV
+uvLXFOrdAS+bC4R/hQO7mIkQxqWIkpSEpu42YHZAMMzTOfNa83JCY8R6YHUBfbVh
+6FrzjGB6llrOKFq/nvU05R7XC9MoKV9sRvzBBoGDVckwrsIzuPBnH5x1lw0Z9i2u
+l4O68D0wFxwwJP6tfH8xLP79vrbXsHAVXdM3Z9AJS+wq/pLOGiS4XLlSMN3t7dW/
+D8S6HjuTI2Sc0LPj53IJy7o0UExuzlfkGiOG9FMRDmuucAZUSTXigVf45J0GA9g=
+=nZKb
 -----END PGP SIGNATURE-----
