@@ -5,20 +5,21 @@ DIST libassuan-2.1.1.tar.bz2 538155 SHA256 23e2d67779b88e90d29fe1df6b157109f1c2a
 DIST libassuan-2.1.2.tar.bz2 516026 SHA256 39f8a7c9349aaaf7ccd937b90660153ec4d2d4df2465018754e5bcae5b1db77b SHA512 a45b1db8521f547eafbf4ddeaa5b1a19dd47be32e1b02103b2c46c0c86291ba2c2124c25151311a90bb2837f8e42fce7b61d9316606b3b19dbabafc57549386b WHIRLPOOL 99928abc5379f0eddf3e3e0d9536969503b2284bdea0040964a8ed072469df61652b906cbaf597234462e565cb60bd2495d772feec34b7c3330bc1416aa710c9
 DIST libassuan-2.1.3.tar.bz2 516087 SHA256 fa2170b353c928eb59610e0700c34947f1890634ddf7bcf2366c9c88b4f51d1a SHA512 ff9f6bd3287139307d42cf6fa9445487bf159db9dde2205246eaba2539f6162b419fdd53863929037550b71c2c12f14a39b60086fa6648e532bab498eee935a6 WHIRLPOOL 15e334f6f8ff9a06c72e57f5b7e550765bef96f0bf129c6066d7e066ff727c71e9bf790478350f02c13b5456baa087cbc52924114f67fe236326d6e0149b0fa6
 DIST libassuan-2.2.0.tar.bz2 516800 SHA256 7df58ed70be4b694f77efd1f3b3f103c6311b6b71e04a370382f9fe8204f6ec6 SHA512 716aa957408d51f518f3efd7238af34daab7889e2c2a8ca9611ba0c60db086062c4533c047caab4d41ef20d3cc6a7185ff2e4f06c9113eb177a961f20e877d99 WHIRLPOOL 576a834fdecab1b5adce68819a866067e9b5b6b02d96ea7060875712df547d7dab33ffb94f168b994240df867b4fc2797b51301ccb89113919d0d6661289b50d
+DIST libassuan-2.2.1.tar.bz2 542381 SHA256 949285bb79345362cb72a40c798defefc007031c60f2f10251720bf60a9de2de SHA512 7788c7c1163bbad659e308d7dc4254f9d6c27ff6bf9d9fad2ef7b9f07392799a3c0f57c6cbcc5f39aecaabb9ba8150044a969099b8d53d2eaf47d6022f1d9c4b WHIRLPOOL 2c6d8038b58122f0e2215f99f472400295c0f4a97dd65b4e0b78ffaf242d3e6b79d4eb3cec9e894e43ec307010e57111b5da08cce66bed2b37501680e6064772
 EBUILD libassuan-2.1.1.ebuild 1006 SHA256 b57d95ed3959b975818d695e2b796720f82722c86df2b4df70db069761f965aa SHA512 84015a5e48b3cbbfd40d7c3c3498a465d518e2cbb95464a531a1fb3d81fd82db88cd59992cc3d1116381c0f5caa5dcb8d98b4c495d704bda5ad91e1d91e0b522 WHIRLPOOL e47c95b9c22c57b09ef6804c9c541a8594068307c15bc6609480aa73e461a63a43e783f60fbc5f486d87710178f8bafae2a5dfe6bf73de97d09b191e565ca8f9
 EBUILD libassuan-2.1.2.ebuild 1096 SHA256 c6cbf9cb45e2df3dd207436aaab35fc82797510e224ab3dba140e39c593fb26f SHA512 7d5f097c7bf09298198421c66c371bfd3cd95a42ed3992c08b5f687c5f033b7704169a70070b52e5c765587b65e6016c2b9904b4a84c64fbb1ee4838fa1460e5 WHIRLPOOL 570c45f4bb0cdd2fb8d6c1c6f73594de3377a5211c2d11ff0da8a83d0af96267122d83e894aff65b67a943ae7922a4cfd57d844189129285a3e1d7c2d62ea933
 EBUILD libassuan-2.1.3.ebuild 1094 SHA256 d53e581ab5ff650aec22f96d2b827a40831dbf2dc39bc0a791fd4e5c995af8e6 SHA512 c5ff300b91a170b561265bedc4b8e41bdd616fb1024d4a43b708b971a49e859c03019ba3ff05734284856ba43ed472a13b5f6509b38ee5174fc8dd3244e4cb98 WHIRLPOOL 236bf56d4d2569be97a725520c10230d7eb63da2fac86ee83014bcac24d7ac5dfc9ffb0688dac83bdc5acfe60bf88a032fe1f230ed5b2111c4099576236f006f
 EBUILD libassuan-2.2.0.ebuild 1094 SHA256 af353834396555dd82e177cd9acd86e2c81463a4beb84f5d7ae4073b32aa696b SHA512 fc84d111d0647335712969c8c2e7e180cbcde3fc2ebd8aca1b67325b29c5da603d96890cc22404f856116ea2490adec24f0f5071c44b5cf2d14d612b5022e4db WHIRLPOOL 67613ec49fc7e5d4b731aae5b1313ba3a7b3333c0166f5f514d28a7d58b1bf872312794c67f4a1e99b85ce7e7ff0c7b1a9b95b3d85672f1e20495218ecfb7499
-MISC ChangeLog 14688 SHA256 d44737abba79f768e22defd9efd6cfbc7af7834fd15a1b66884364a142453bf1 SHA512 1a49a0eb163a639cf829a1055ab7d2897f8542697bc6e61bb48847e70d8b6f8239c83dcb2b71b272700a8567b13330705f0f5da5a83ab9657af2752473a98ea2 WHIRLPOOL f585f4bb75d87fa97a663e77bf513e7d7f97a6270b49b863fd2417e9f153a530aca388123eb3010503ca4580e2bacdd457b2e2ffb663407c77719113913c39d7
+EBUILD libassuan-2.2.1.ebuild 1088 SHA256 19d421dc4fa277134f8c02159234a79d062d970f01b7af7ed3073d84fe456172 SHA512 42743083558c259a550d144a2b045549746224799674e288730d73c438a43e154bf64f183f95285cdb0f871e04828233458cc85d5528de3846d08a72495f3c6b WHIRLPOOL 9857518c3294f1696f9c47d2cafab7faac18cb235daee3e60fb1d3e27bef9b22e665d189b9ff4d1489040c7366b3a337f0cfb5193dffd587498668e631d4317c
+MISC ChangeLog 14809 SHA256 e7368362f5ff0828ef8675791cc30c01cb1c988f09894ed31938786b3a593bb8 SHA512 e545672f36630e452b4ee61d602bcf6472dc3182045e3712ca1e99909552ab55d8375bae6273d58cf6bf169c42595a659b5cb669e191b43d30b0f11906c9cd58 WHIRLPOOL f3a216fb99dac83b32671e520a9aa36068cb33e798a0c952bf423641b259690bfb099ce276b9f7ca966eb0a4cfa6eb27adca324c9c583f99975f137e5c5481eb
 MISC metadata.xml 781 SHA256 03c037cbf0f8adef225909f74103ac887511be510631373e014ed7fee8542d3a SHA512 dfe568aa8bdcdaacc1ff205108391e4ff5328d4a95f89f0b9b9af3e8c8fd474033c9656f1357ee634c0e2cdb66f265aabc176b1335e450d7e1cf1680233ec6f0 WHIRLPOOL c96f78bf21e990b3d230a3c6b3e4291fb533ffd2e414b98938303432c458d52fd8ec43c27c96d89527a7bb3a898e8f8de048c059a3591d114ec8ff81e0db0aa9
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2
 
-iQEcBAEBCAAGBQJUkNdbAAoJEEqz6FtPBkyjHEwIAI2K72tKQMXS77lfZfLa9Rf+
-sJCgIAbVZ6o0PVRF3UhJk67Er++tSaKOGsSBWXgdylRg2zt4Mbyfp+rMSJwOwsq7
-YVcfO8MmU0cegtTwQEwXQlsQYvsansCvFpQ7tD3XMYc6nMvIqEzqZK4nCACbNojy
-7JS6/RnbYHMrcT4DCx0kfsy64gBnRlWWg2c4ppfW6316NpgL0g3SBDXB86uJB1Ux
-+GoMpFoQOhTJJB7KINrlGlGUo1wJX7gEw4FJJiF0wDcaKuxyMp7aPB/JsnwedKep
-+29G8z/rX6jpza1vAHYTgQe2AMGkxfSMcs+sRV51Gn46hZVWe/tgdzeviXAnuwI=
-=jv8n
+iQEcBAEBCAAGBQJVVLrCAAoJEP7VAChXwav6L9UH/j152a35fDJm9t0OJyYW6x83
+cCbv2/70UhB2svqV8Vrpi1Tq6gCoL6Btd/ZRj2NSRHPXOGaTv4dEi1o7sOacvwRI
+5zsziMiMC5arecXDwWDVitT8i7R2kD6hFAgCzGfWgGt26vXHo07kJsJWw7i9ktw4
+93+bxcqP6xVck2prEjb2clnwVJaoyEHCk7pI6i7d9+oLEcpsoad51qsNXEt2mafE
+9pO3kJrg6E2ovqpy3UmNTdlQBkJxh85srGeCYFTR/gJceCavyaBRU7PA7j8Qyfow
+2cER7ogd5yeLkPmkhAY/nPedPqrOgq0G+cD1i3BXIDcF9JCSIaNKPYazfr1cj7g=
+=vIPQ
 -----END PGP SIGNATURE-----
