@@ -1,0 +1,13 @@
+DEFINED_PHASES=configure install prepare
+DEPEND=>=dev-libs/libgpg-error-1.8
+DESCRIPTION=IPC library used by GnuPG and GPGME
+EAPI=5
+HOMEPAGE=http://www.gnupg.org/related_software/libassuan/index.en.html
+IUSE=static-libs
+KEYWORDS=~alpha ~amd64 ~arm ~arm64 ~hppa ~ia64 ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~ppc-aix ~amd64-fbsd ~x86-fbsd ~x64-freebsd ~x86-freebsd ~amd64-linux ~arm-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~sparc-solaris ~sparc64-solaris ~x64-solaris ~x86-solaris
+LICENSE=GPL-3 LGPL-2.1
+RDEPEND=>=dev-libs/libgpg-error-1.8
+SLOT=0
+SRC_URI=mirror://gnupg/libassuan/libassuan-2.2.1.tar.bz2
+_eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92
+_md5_=a7d5231e37a316ca1add99415269fb5e
